<resources>
    <string name="app_name">Move</string>
    <string name="opem_name">Open TestUiMove</string>
    <string name="close_name">Close TestUiMove</string>
    <string name="action_settings">Settings</string>
    <string name="action_following">Following</string>
    <string name="action_browse">Browse</string>
    <string name="action_more">More</string>
    <string name="action_faq">FAQ</string>
    <string name="action_guideline">Community guideline</string>
    <string name="action_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_category">Category</string>
    <string name="txt_videos_you_may_like">Videos you may like</string>
    <string name="featured">Featured</string>
    <string name="timeOfCategory">&lt; 30 mins</string>
    <string name="duration_second">&lt; 1 hour</string>
    <string name="duration_third">&gt; 1 hour</string>
    <string name="viewOfVideo">1.34k</string>
    <string name="video_title">Leg days</string>
    <string name="username">Vu Dung</string>
    <string name="video_category">%s •</string>
    <string name="video_rateNumber">4.5</string>
    <string name="typeOfUser">Beginner</string>
    <string name="category_title">MMA</string>
    <string name="category_view">10.2k views</string>
    <string name="category_layout">Category</string>
    <string name="layout_videomaylike">Videos you may like</string>
    <string name="timeOfVideo">15:30</string>
    <string name="timeVideoRelease">A day ago</string>
    <string name="text_email">Email</string>
    <string name="login_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="incorrect_account">Incorrect Account</string>
    <string name="invalid_email">* Invalid Email</string>
    <string name="email_white_space">Email contains spaces</string>
    <string name="password_white_space">Password contains spaces</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile picture</string>
    <string name="update_profile_picture">Update profile picture</string>
    <string name="username_title">Username</string>
    <string name="email_address">nguyenvudung030121@gmail.com</string>
    <string name="full_name">Full name</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="rather_not_say">Rather not say</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save_settings">Save settings</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="please_select_country">Please select country</string>
    <string name="please_select_state">Please select state</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="error_fullname_chars">Fullname must be 4–100 characters and contain both normal characters, dot, space</string>
    <string name="dob_years">2002</string>
    <string name="dob_month">Jan</string>
    <string name="txt_log_in">Login</string>
    <string name="txt_log_out">Logout</string>
    <string name="Hide">Hide %s replies</string>
    <string name="Show">Show %s replies</string>
    <string name="Report">Report comment</string>
    <string name="name_user_comment">LeDinhThang</string>


    <string name="nameProfile">dianeTV</string>

    //FAQ
    <string name="tvFAQ">FAQ</string>
    <string name="tvBotFAQ">Can’t find an answer? Contact us here and we will address your problem as soon as possible.</string>
    <string name="itemFAq">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</string>
    <string name="itemMinus">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic.</string>

    //Menu
    <string name="nameAvatar">philip2020</string>
    <string name="TermsofService">Terms of Service</string>
    <string name="Privacypolicy">Privacy policy</string>

    //Guidelines
    <string name="tvGuideline">Community Guidelines</string>
    <string name="titlegosehere">Title goes here</string>
    <string name="tv1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="tv2">
           <![CDATA[
        <ul style="padding-left: 0;">
             <li style="padding-left: 0;">
                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
              </li>

             <li style="padding-left: 0;">
               It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </li>

             <li style="padding-left: 0;">
               It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using ‘Content here, content here’, making it look like readable English.
             </li>

             <li style="padding-left: 0;">
               Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for ‘lorem ipsum’ will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
             </li>
        </ul>
              ]]>
    </string>
    <string name="tv3">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="tv4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using ‘Content here, content here’, making it look like readable English.</string>
    <string name="tv5">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for ‘lorem ipsum’ will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="tv6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.  </string>

    <string name="player_activity_name">Media player</string>
    <string name="media_url_mp3">http://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_mp4">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[http://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="logo">Google logo</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="txt_required">*</string>
    <string name="txt_pls_enter_password">Please enter password!</string>
    <string name="txt_pls_enter_email">Please enter email!</string>
    <string name="error_user_name">Minimum 4 characters required.</string>
    <string name="txt_error_spc_chars">Only letter and number.</string>
    <string name="txt_error_contains_alpnum">Username must contain alphanumeric characters</string>
    <string name="txt_level_beginner">Beginner</string>
    <string name="txt_level_inter">Intermediate</string>
    <string name="txt_level_advanced">Advanced</string>
    <string name="count_view">%s views</string>
    <string name="video_post_time">• %s days ago</string>
    <string name="txt_error_full_name_sake">Username already exists, Please enter another username!</string>
    <string name="loading">Loading…</string>
    <string name="a_day_ago">A day ago</string>
    <string name="txt_no_internet_connection">No internet connection, Please try later!</string>
    <string name="txt_try_again">Try Later</string>
    <string name="txt_error_us_25_char">Maximum 25 characters required.</string>
    <string name="txt_no_internet">No Internet Connection</string>
    <string name="txt_error_max_char">Maximum 100 characters required.</string>
    <string name="txt_error_fn_format">Full name format is incorrect.</string>
    <string name="txt_no_us_name">No UserName</string>
    <string name="txt_timeout">Timeout Get Data</string>
    <string name="send_comment">Send Comment Success!</string>
    <string name="post_view">Post View Success</string>
    <string name="cannot_send_comment">Cannot send comment!</string>
    <string name="cannot_send_reply">Cannot send reply!</string>
    <string name="bad_request">Bad Request</string>
    <string name="video_exist">Video Not Exist</string>
    <string name="userband">Suspended MOVE Account</string>
    <string name="commentband">[This comment has been removed due to violation of community guideline]</string>


</resources>