<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.menu.MainMenuActivity"
    tools:showIn="navagation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_following"
            android:orderInCategory="100"
            android:title="@string/action_following"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="300"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_browse"
            android:orderInCategory="200"
            android:title="@string/action_browse"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_more"
            android:orderInCategory="400"
            android:title="@string/action_more"
            app:showAsAction="never">
            <menu
                android:checkableBehavior="single"
                android:drawableLeft="@drawable/ic_arrow_down"
                android:drawableEnd="@drawable/ic_arrow_up">
                <item
                    android:id="@+id/action_faq"
                    android:orderInCategory="100"
                    android:title="@string/action_faq"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_guideline"
                    android:orderInCategory="200"
                    android:title="@string/action_guideline"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="900"
        android:title="@string/action_login"
        app:showAsAction="never" />
</menu>