<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feature_fragment1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_carousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_featured_videoThumbnail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/img_featured_user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_feature1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_ViewOfVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_featured_videoThumbnail"
            app:layout_constraintStart_toStartOf="@+id/img_featured_videoThumbnail">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_view_eye"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_3sdp"
                android:padding="@dimen/_2sdp"
                app:srcCompat="@drawable/icon_eye" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="@string/viewOfVideo"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_featured_user_avatar"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_featured_videoThumbnail"
            app:srcCompat="@drawable/avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_feature_video_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="1"
            android:text="@string/video_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@id/img_videoRate"
            app:layout_constraintStart_toEndOf="@id/img_featured_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/img_featured_videoThumbnail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_feature_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="1"
            android:text="@string/username"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@id/txt_feature_video_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_feature_video_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_feature_video_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/video_category"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/txt_feature_video_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_feature_user_name" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_blueTick"
            android:layout_width="@dimen/_11sdp"
            android:layout_height="@dimen/_11sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="@id/txt_feature_user_name"
            app:layout_constraintStart_toEndOf="@id/txt_feature_user_name"
            app:layout_constraintTop_toTopOf="@id/txt_feature_user_name"
            app:layout_goneMarginStart="@dimen/_5sdp"
            app:srcCompat="@drawable/blue_tick" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_videoRate"
            android:layout_width="@dimen/_13sdp"
            android:layout_height="@dimen/_13sdp"
            android:layout_marginEnd="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/txt_feature_video_title"
            app:layout_constraintEnd_toStartOf="@id/txt_featured_rate_number"
            app:layout_constraintTop_toTopOf="@id/txt_feature_video_title"
            app:srcCompat="@drawable/rate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_featured_rate_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/video_rateNumber"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/img_videoRate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_videoRate" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_level_of_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="@id/txt_feature_video_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_feature_video_category">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_level_of_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="7dp"
                android:text="@string/typeOfUser"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_timeOfCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_level_of_user"
            app:layout_constraintStart_toEndOf="@id/cardView_level_of_user"
            app:layout_constraintTop_toTopOf="@+id/cardView_level_of_user">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_videoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="7dp"
                android:text="@string/timeOfCategory"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
