<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/login_dialog_layout"
    android:padding="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_dialog">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_login_logo"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_login_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_close_login_dialog"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/img_login_logo"
            app:layout_constraintTop_toTopOf="@+id/img_login_logo"
            app:srcCompat="@drawable/ic_close_dialog" />

        <RelativeLayout
            android:id="@+id/login_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/img_login_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/text_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@+id/edit_login_email"
            app:layout_constraintStart_toStartOf="@id/edit_login_email"
            app:layout_constraintTop_toBottomOf="@+id/login_line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/txt_required"
            android:textColor="@color/error_red"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@id/txt_login_email"
            app:layout_constraintStart_toEndOf="@id/txt_login_email"
            app:layout_constraintTop_toTopOf="@id/txt_login_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_login_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="text"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@id/login_line"
            app:layout_constraintStart_toStartOf="@id/login_line"
            app:layout_constraintTop_toBottomOf="@id/txt_login_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_error_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_italic"
            android:text="@string/invalid_email"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/_13ssp"
            android:visibility="gone"
            app:fontFamily="@font/montserrat_italic"
            app:layout_constraintBottom_toTopOf="@id/txt_login_password"
            app:layout_constraintStart_toStartOf="@+id/login_line"
            app:layout_constraintTop_toBottomOf="@+id/edit_login_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@+id/edit_login_password"
            app:layout_constraintStart_toStartOf="@id/edit_login_email"
            app:layout_constraintTop_toBottomOf="@+id/txt_error_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/txt_required"
            android:textColor="@color/error_red"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@id/txt_login_password"
            app:layout_constraintStart_toEndOf="@id/txt_login_password"
            app:layout_constraintTop_toTopOf="@id/txt_login_password" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_login_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/custom_edittext"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ.abcdefghijklmnopqrstuvwxyz1234567890~#^|$%@*!+-,&amp;"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_36sdp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@id/login_line"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/login_line"
            app:layout_constraintTop_toBottomOf="@id/txt_login_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_hide_password"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@id/edit_login_password"
            app:layout_constraintEnd_toEndOf="@id/edit_login_password"
            app:layout_constraintTop_toTopOf="@id/edit_login_password"
            app:srcCompat="@drawable/ic_hide_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_show_password"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_19sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/edit_login_password"
            app:layout_constraintEnd_toEndOf="@id/edit_login_password"
            app:layout_constraintTop_toTopOf="@id/edit_login_password"
            app:srcCompat="@drawable/ic_show_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_error_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_italic"
            android:text="@string/txt_pls_enter_password"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/_13ssp"
            android:visibility="gone"
            app:fontFamily="@font/montserrat_italic"
            app:layout_constraintBottom_toTopOf="@id/txt_login_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/login_line"
            app:layout_constraintTop_toBottomOf="@+id/edit_login_password" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/move_green"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/edit_login_email"
            app:layout_constraintTop_toBottomOf="@+id/txt_error_password" />

        <RelativeLayout
            android:id="@+id/layout_error_message"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/custom_error_message"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="@id/login_line"
            app:layout_constraintStart_toStartOf="@+id/txt_login_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_forgot_password">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/incorrect_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:alpha="1"
            android:background="@drawable/custom_login_button"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/login_line"
            app:layout_constraintStart_toStartOf="@id/login_line"
            app:layout_constraintTop_toBottomOf="@+id/layout_error_message" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
